[refactor] playground 로그인시 솝탬프 정보 업데이트 로직 추  (#399)